<resources>
        
    <string name="app_name">App Locker</string>
     
    <string name="lockscreen_access_pattern_cell_added">Added cell</string>
        
    <string name="lockscreen_access_pattern_start">Draw unlock pattern</string>
        
    <string name="lockscreen_access_pattern_detected">Pattern has been saved </string>
        
    <string name="lockscreen_access_pattern_cleared">Pattern has been deleted </string>
          
    <string name="lock_recording_intro_header">Set the App\'s unlock pattern</string>
        
    <string name="lock_settings_help_how_to_record">How to draw an unlock pattern</string>
        
    <string name="lock_recording_incorrect_too_short">You should connect at least 4 points.</string>
        
    <string name="lock_pattern_entered_header">Record pattern</string>
        
    <string name="lock_need_to_confirm">Draw the pattern again to confirm</string>
        
    <string name="lock_need_to_unlock_wrong">The pattern do not match. Please try again.</string>
        
    <string name="password_gestrue_tips">Draw pattern to unlock</string>
        
    <string name="password_error_count">The pattern does not match. Please try again.</string>
        
    <string name="lock_pattern_confirmed_header">Confirmed Pattern</string>
       
    <string-array name="app_lock_time_array">
                
        <item>After 15 seconds</item>
                
        <item>After 30 seconds</item>
                
        <item>After 1 minute</item>
                
        <item>After 3 minutes</item>
                
        <item>After 5 minutes</item>
                
        <item>After 10 minutes</item>
                
        <item>After 30 minutes</item>
                
        <item>Immediate</item>
            
    </string-array>
     
        
    <string name="dialog_permission_tip"> Your Android version is greater than or equal Android 5.0, App Locker need to get the \"Application Usage\" permission
    </string>
    <string name="welcome_to_the_app_lock">Welcome to the App locker</string>
    <string name="reset">Reset</string>
    <string name="create_pattern">Create pattern</string>
    <string name="please_draw_your_pattern">Please draw your pattern</string>
    <string name="identity_confirmation">Identity confirmation</string>
    <string name="search_application">Search Apps</string>
    <string name="settings">Settings</string>
    <string name="lock_time">App lock time</string>
    <string name="locked_with">Lock app when locked the mobile</string>
    <string name="open">Open</string>
    <string name="change_pass">Change lock</string>
    <string name="show_pattern">Show lock pattern</string>
    <string name="hiding_pass">Hide lock pattern</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="warning">Warning</string>
    <string name="_1_minute">1 minute</string>
    <string name="apps">Apps</string>
    <string name="accessibility_service_description">This permission is only used for locking the apps</string>

    <!--admob ids-->
    <string name="ad_app_id">ca-app-pub-3940256099942544~6300978111</string>
    <string name="ad_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_interstitial">ca-app-pub-3940256099942544/1033173712</string>
</resources>