<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="vertical"
              android:paddingLeft="@dimen/_15sdp"
              android:paddingRight="@dimen/_15sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center"
        android:text="@string/warning"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center_horizontal"
        android:text="@string/dialog_permission_tip"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_45sdp"
        android:scaleType="fitStart"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:src="@drawable/per_hint_one" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/per_hint_two"/>

    <TextView
        android:id="@+id/btn_permission"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/round_tabbg"
        android:gravity="center"
        android:text="@string/allow_permission"
        android:textColor="@color/white"/>
</LinearLayout>