<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_95sdp"
        android:background="@drawable/top">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_18sdp"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pattern"
        android:layout_below="@+id/header_layout"
        android:padding="@dimen/_15sdp"
        android:layout_margin="@dimen/_12sdp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <CheckBox
                android:id="@+id/chk_on_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:button="@drawable/checkbox_switch" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_15sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:lines="2"
                android:text="@string/locked_with"
                android:textColor="#fff"
                android:textSize="@dimen/_14sdp" />

            <CheckBox
                android:id="@+id/chk_lock_with_phone_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:button="@drawable/checkbox_switch" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/hiding_pass"
                android:textColor="#fff"
                android:textSize="@dimen/_14sdp" />

            <CheckBox
                android:id="@+id/chk_hide_pattern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:button="@drawable/checkbox_switch" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lock_when"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/lock_time"
                android:textColor="#fff"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/app_lock_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:textColor="#fff"
                android:textSize="@dimen/_9sdp"
                tool:text="immediate"
                app:drawableRightCompat="@drawable/right_arrow" />
        </RelativeLayout>

        <TextView
            android:id="@+id/btn_change_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:drawableRight="@drawable/right_arrow"
            android:gravity="center_vertical"
            android:text="@string/change_pass"
            android:textColor="#fff"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
</RelativeLayout>